changed my_files overflow to horizontal; there are margin issues on the far right

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,7 +105,7 @@ body {
 
 .files-panel {
   max-height: 520px;
-  max-width: 600px;
+  max-width: 550px;
   box-shadow: 3px 3px 10px #333, 0px 2px 10px #444;
   border: none;
   display: inline-block;
@@ -125,7 +125,7 @@ body {
 
 .files-panel-body{ 
   max-height: 400px;
-  overflow-y: scroll !important;
+  overflow-x: scroll !important;
   padding-top: 19px;
   padding-bottom: 19px;
   padding-left: 19px;
