--- a/app/assets/stylesheets/note_files.scss
+++ b/app/assets/stylesheets/note_files.scss
@@ -10,6 +10,8 @@
   padding: 12px 16px 12px 8px;
   box-shadow: 2px 2px 6px #555555;
   border-radius: 3px;
+  overflow-x: scroll;
+  height: 400px;
 }
 
 .newspaper div {
